# augenblick

./: .gitignore  AGENTS.md  README.md  components.json  conductor.json  index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: publish.yml  release.yml
docs/: choices.md
plans/: migration.editor.md  migration.editor.tiptap.md  migration.inventory.md  migration.md  migration.qa.md
resources/app-icon.icon/: icon.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  Entitlements.plist  tauri.appstore.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_state.rs  commands.rs  db.rs  expiry.rs  lib.rs  logs.rs  main.rs  notes.rs  scoped_file.rs  types.rs  window_state.rs
src-tauri/src/notes/: derive.rs  files.rs  import.rs  list.rs  meta.rs  ordering.rs  scoped_updates.rs  time.rs  trash.rs  write.rs
src/app/: AppShell.tsx  ErrorBoundary.tsx
src/app/hooks/: useAppBootstrap.ts  useExpiryScheduler.ts  useUpdater.ts  useWindowAndMenuEvents.ts
src/components/icons/: Icon.tsx
src/components/ui/: DialogHost.tsx  alert-dialog.tsx  command.tsx  dialog.tsx  empty.tsx  select.tsx  sonner.tsx  tabs.tsx  tooltip.tsx
src/features/command/: CommandPalette.tsx
src/features/editor/: Editor.tsx  LinkBubbleMenu.tsx  TrashPreview.tsx  clipboardPolicy.ts  (+1 more)
src/lib/: api.ts  types.ts
src/routes/: pageActions.ts  pageHotkeys.ts
src/stores/: dialogStore.tsx  notesStore.ts  settingsStore.ts
src/test/: App.test.tsx  setup.ts
(+38 files in other folders)
